# nitpick-cli

./: .gitignore  CONTEXT.md  Cargo.toml  README.md  config.example.toml  mise.toml  plan.md
.github/workflows/: release.yml  test.yml
.turbo/plans/: pr-context-mcp-tools.md
crates/nitpick-agent-cli/: Cargo.toml
crates/nitpick-agent-cli/src/: activity.rs  artifact.rs  chat.rs  cli.rs  context.rs  debug.rs  lib.rs  main.rs  review.rs  style.rs  support.rs  system.rs
crates/nitpick-agent-client/: Cargo.toml
crates/nitpick-agent-client/src/: client.rs  error.rs  json.rs  lib.rs  models.rs  transport.rs
crates/nitpick-agent-core/: Cargo.toml
crates/nitpick-agent-core/src/: activity.rs  app_paths.rs  artifact.rs  clock.rs  command_provider.rs  error.rs  host.rs  json.rs  lib.rs  macos_sandbox.rs  model.rs  nono_profile.rs  nono_sandbox.rs  provider.rs  provider_command_runner.rs  provider_failure.rs  provider_log.rs  provider_sandbox.rs  repo_path.rs  review_identity.rs  review_output.rs  review_session.rs  review_source.rs  runtime.rs  session.rs  store.rs  sync.rs
crates/nitpick-agent-core/tests/: command_provider.rs  local_store.rs  review_identity.rs  review_session.rs  runtime.rs
crates/nitpick-agent-github/: Cargo.toml
crates/nitpick-agent-github/src/: command.rs  lib.rs  pending_review_reconciler.rs  pull_request_client.rs  review_sync.rs
crates/nitpick-agent-github/tests/: discovery.rs  pull_request_ref.rs  sync_destination.rs
crates/nitpick-agent-host/: Cargo.toml
crates/nitpick-agent-host/src/: api.rs  lib.rs  main.rs  polling_state.rs  review_intake.rs  review_mcp.rs  review_mcp_session_store.rs  review_poll_cycle.rs  review_queue.rs  review_slots.rs
crates/nitpick-agent-host/tests/: api.rs  config.rs  daemon.rs  review_mcp.rs
crates/nitpick-agent-integration-tests/: Cargo.toml
crates/nitpick-agent-integration-tests/src/: lib.rs
crates/nitpick-agent-integration-tests/src/support/: clock.rs  github.rs  harness.rs  mod.rs  provider.rs
crates/nitpick-agent-integration-tests/tests/: cli_smoke.rs  github_polling.rs  host_api.rs
docs/superpowers/plans/: 2026-05-12-daemon-log-persistence.md
docs/superpowers/specs/: 2026-05-13-github-review-sync-design.md  2026-05-18-cli-clap-command-structure-design.md  2026-05-18-github-review-workflow-design.md
examples/: config.toml  review-mcp-instructions.md  review-prompt.md
macos/: Package.resolved  Package.swift  README.md
macos/Bundle/: Info.plist
macos/Resources/: LICENSE.md  NitpickAgentIcon.icns
macos/Sources/NitpickAgentApp/: AppDelegate.swift  HostClient.swift  HostProcess.swift
macos/Sources/NitpickAgentMacOSCore/: ActivitySnapshot.swift  CommandLineInstaller.swift  ConfigFile.swift  HostStatus.swift  LoginItemManager.swift  MenuBarIdentity.swift  MenuPresentation.swift  MenuSnapshot.swift
macos/Tests/NitpickAgentAppTests/: AppDelegateMenuTests.swift  HostClientTests.swift
macos/Tests/NitpickAgentMacOSCoreTests/: CommandLineInstallerTests.swift  ConfigFileTests.swift  HostStatusTests.swift  LoginItemManagerTests.swift  MenuBarIdentityTests.swift  MenuPresentationTests.swift  MenuSnapshotTests.swift
macos/scripts/: build-app.sh  generate-appcast.sh
scripts/: install.sh  release.sh
