[workspace]
members = [
  "crates/nitpick-agent-cli",
  "crates/nitpick-agent-core",
  "crates/nitpick-agent-github",
  "crates/nitpick-agent-client",
  "crates/nitpick-agent-host",
  "crates/nitpick-agent-integration-tests",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
axum = "0.8.8"
nitpick-agent-core = { path = "crates/nitpick-agent-core" }
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread"] }
toml = "0.9.8"
tower = "0.5.2"
