[package]
name = "nitpick-agent-client"
version.workspace = true
edition.workspace = true

[dependencies]
nitpick-agent-core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror = "2.0.18"
ureq = { version = "3.3.0", default-features = false, features = ["json"] }
