[package]
name = "nitpick-agent-host"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
nitpick-agent-core.workspace = true
nitpick-agent-github = { path = "../nitpick-agent-github" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tower = { workspace = true, features = ["util"] }
