[package]
name = "nitpick-agent-host"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
fs-err = "3.3.0"
nitpick-agent-core.workspace = true
nitpick-agent-github = { path = "../nitpick-agent-github" }
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.27.0"
tower = { workspace = true, features = ["util"] }
